--- a/doc/manual/UserManual.tex
+++ b/doc/manual/UserManual.tex
@@ -97,8 +97,8 @@ Doxygen HTML documentation.
 
 \subsection{Requirements}
 
-Building libSplash from source requires to checkout the trunk via Subversion using the command\\
-\command{svn co https://fusionforge.zih.tu-dresden.de/svn/datacollector/trunk/}
+Building libSplash from source requires to checkout the master via Git using the command\\
+\command{git clone} \command{git@github.com:ComputationalRadiationPhysics/libSplash.git}
 Building libSplash requires HDF5 in version 1.8.6 or higher.
 To use the CMakeLists.txt file which comes with the source code,
 you must have CMake version 2.6 installed.
