--- a/doc/manual/UserManual.tex
+++ b/doc/manual/UserManual.tex
@@ -97,24 +97,15 @@ Doxygen HTML documentation.
 
 \subsection{Requirements}
 
-Building libSplash from source requires to checkout the trunk via Subversion using the command\\
-\command{svn co https://fusionforge.zih.tu-dresden.de/svn/datacollector/trunk/}
-Building libSplash requires HDF5 in version 1.8.6 or higher.
-To use the CMakeLists.txt file which comes with the source code,
-you must have CMake version 2.6 installed.
+Please see the file doc/INSTALL.md for details.
 
 \subsection{Compiling}
 
-To compile libSplash, it is recommended to create a new \command{build} folder
-and execute \command{cmake CMAKE\_INSTALL\_PREFIX=\textless INSTALL\_PATH \textgreater \textless CMakeLists.txt\_PATH \textgreater}\\
-Than run \command{make install} to build and install libSplash library and binaries to the chosen installation directory.
-This will build libSplash as an shared object library (\emph{libsplash.so}) as well as all tools.
+Please see the file doc/INSTALL.md for details.
 
 \subsection{Linking}
 
-To use libSplash in your project, you must link against the created shared object library
-\emph{libsplash.so}.
-
+Please see the file doc/INSTALL.md for details.
 
 \section{Usage}
 
