--- a/doc/manual/UserManual.tex
+++ b/doc/manual/UserManual.tex
@@ -149,10 +149,13 @@ Example:
 	\emph{simulation\_data\_0\_1\_0.h5} and \emph{simulation\_data\_1\_1\_0.h5} are created.
 \end{itemize}
 
+
 \subsection{File Structure}
 
 Each libSplash file uses a similar internal file structure which is composed from groups (folders),
-datasets, attributes and references.
+datasets, attributes and references. A dataset in a libSplash HDF5 file is stored in the data group
+(see below) under its timestamp, e.g. \code{/data/100/my\_dataset}.
+Groups can be organized in hierarchies.
 
 \begin{itemize}
 	\item \textbf{header}
@@ -168,20 +171,18 @@ datasets, attributes and references.
 		Iteration 0
 		\begin{itemize}
 			\item dataset\_A
-			\item dataset\_B
+			\item group\_1/dataset\_B
 		\end{itemize}
 
 		\item \textbf{10}
 		Iteration 10
 		\begin{itemize}
 			\item dataset\_A
-			\item dataset\_B
+			\item group\_1/dataset\_B
 		\end{itemize}
-
-		\item ...
 	\end{itemize}
 
-	\item \textbf{common}
+	\item \textbf{common} [deprecated]
 \end{itemize}
 
 
@@ -212,7 +213,6 @@ The following file access types are available:
 	\item \code{FAT\_READ\_MERGED}
 	All existing files belonging to a single multi-process run are opened simultaneously in read-only mode.
 	Data from all files can be read transparently as if written to a single file.
-
 \end{itemize}
 
 \subsection{Closing Files}
@@ -354,6 +354,7 @@ Domain data can be of two types:
 To write Domain data, use any of the \code{DomainCollector::writeDomain} calls.
 Each requires information on the source data and buffer to read from, a name for the Dataset, the Datatype as well as
 Domain information: the stored domain offset and area and the type of data stored (GridType or PolyType).
+Domain information is annotated as HDF5 attributes to the dataset.
 
 \section{Reading Domains}
 
@@ -372,8 +373,8 @@ each physical read.
 These DomainData object can be queried successively or by their 1-3-dimensional index
 (\code{DataContainer::get} and \code{DataContainer::getIndex}).
 Additionally, all elements from all DomainData objects within one DataContainer can be
-queried continuously using \code{DataContainer::getNumElements} as well as
-\code{DataContainer::getElement}.
+queried continuously using \code{getNumElements} as well as
+\code{getElement}.
 
 
 \section{Appending Domains}
