Close #78 Documentation FindSplash CMake Module

--- a/doc/manual/UserManual.tex
+++ b/doc/manual/UserManual.tex
@@ -112,7 +112,7 @@ Please see the file doc/INSTALL.md for details.
 
 \section{Usage}
 
-To use libSplash in your application, the only include file necessary is \code{splash.h}.
+To use libSplash in your application, the only include file necessary is \code{splash/splash.h}.
 libSplash consists of two parts: the basic \code{DataCollector} interface and the extended \code{DomainCollector} interface.
 
 \code{DataCollector} is the basic interface for most operations, such as accessing files as well as reading
