--- a/doc/manual/UserManual.tex
+++ b/doc/manual/UserManual.tex
@@ -212,7 +212,7 @@ Groups can be organized in hierarchies.
 
 Before data can be stored or read, files must be opened by calling
 \code{DataCollector::open}. This method requires the common part of the filename
-and an object of type \code{FileCreationAttr}.
+and an object of type \\\code{FileCreationAttr}.
 This object defines the file access type as well as the number of
 participating MPI processes, the MPI position of the calling process and further information.
 The following file access types are available:
@@ -264,13 +264,16 @@ related to a specific index beneath this group.
 
 To write data, use any of the \code{DataCollector::write} methods.
 They require the used datatype, the number
-of dimensions (\code{ndims}, 1-3), the size of the actual data, buffers and offsets in
-each dimension as a \code{Dimensions} object, the name for the dataset and a pointer
+of dimensions (\code{ndims}, 1-3), the size of the actual data, buffers, strides and offsets in
+each dimension as a \code{Selection} object, the name for the dataset and a pointer
 holding the data.
 Any existing dataset in this group with the same is name is overwritten.
 
 Please note that the user is responsible to pass a correct \code{CollectionType} to
 any \code{write} call. Otherwise, user data may be interpreted incorrectly.
+Besides the pre-defined data types, new types can be created by inheriting from the \code{CollectionType}
+interface or using the macros for array- and compound-types, \code{TYPE\_ARRAY()} and \\ \code{TYPE\_COMPOUND()}.
+
 
 \subsection{Reading}
 
@@ -437,7 +440,7 @@ that each file contains only a single iteration but the data from all processes)
 
 \subsection{Opening Files}
 
-Before data can be stored or read, files must be opened by calling
+Before data can be stored or read, files must be opened by calling \\
 \code{ParallelDataCollector::open}. This method requires the common part of the filename
 and an object of type \code{FileCreationAttr}.
 Calls to this function are collective.
