Move INSTALL.md to Root Dir
Usually, one should find the install instructions in the
root directory.

--- a/doc/manual/UserManual.tex
+++ b/doc/manual/UserManual.tex
@@ -100,7 +100,7 @@ Doxygen HTML documentation.
 
 \subsection{Requirements and Compiling}
 
-Please see the file \path{doc/INSTALL.md} for details.
+Please see the file \path{INSTALL.md} for details.
 
 \section{Usage}
 
@@ -108,7 +108,7 @@ Please see the file \path{doc/INSTALL.md} for details.
 
 We provide a \code{FindSplash.cmake} module that can be used in your codes\newline
 \path{CMakeLists.txt} file. Install instructions and further hints for non-cmake based
-linking can be found in the file \path{doc/INSTALL.md} .
+linking can be found in the file \path{INSTALL.md} .
 
 \subsection{Includes}
 
