remove usage of timestep and similar texts

--- a/doc/manual/UserManual.tex
+++ b/doc/manual/UserManual.tex
@@ -176,7 +176,7 @@ Example:
 
 Each libSplash file uses a similar internal file structure which is composed from groups (folders),
 datasets, attributes and references. A dataset in a libSplash HDF5 file is stored in the data group
-(see below) under its timestamp, e.g. \code{/data/100/my\_dataset}.
+(see below) under its iteration stamp, e.g. \code{/data/100/my\_dataset}.
 Groups can be organized in hierarchies.
 
 \begin{itemize}
@@ -422,7 +422,7 @@ Since only a single (parallel) file is created by all participating MPI processe
 the filename structure is \emph{(common name)\_(iteration).h5}.
 \emph{common name} is the name chosen by the user for the libSplash files, e.g.
 'simulation\_data'.
-\emph{iteration} is the iteration id (simulation timestep), e.g. 0, 100, 512.
+\emph{iteration} is the iteration id (simulation iteration step), e.g. 0, 100, 512.
 One file is created for each iteration for the sake of resilience.
 
 Example:
@@ -486,7 +486,7 @@ The only exception are \code{append} calls which are not collective but must be 
 
 When using parallel libSplash, the functions \code{getMaxID} and \code{getEntryIDs}
 internally list the files in the directory of the HDF5 filename given at \code{open}
-to obtain the list of available timestamps for this file set.
+to obtain the list of available iteration stamps for this file set.
 Therefore, old files in the same directory with the same common filename part will be recognized as belonging
 to the current file set, too.
 
@@ -520,7 +520,7 @@ If global domain information is missing, it is derived from the local informatio
 Features include:
 \begin{itemize}
 	\item List all file entries.
-	\item Transparently delete timesteps in all HDF5 files belonging to a single run.
+	\item Transparently delete iteration steps in all HDF5 files belonging to a single run.
 	\item Check files for syntactic and semantic consistency.
 \end{itemize}
 Run \command{splashtools --help} for a complete list of all current features.
